# InterMarx

./: CMakeLists.txt  main.c
ex/: CMakeLists.txt  ex.c  jit.c  opcodes.c  runtime.c
far/: far.c  trampoline.s
hp/: hp.c  hpp.h
include/: intermarx.h
include/ex/: ex.h  runtime.h
include/far/: far.h
include/hp/: hp.h
include/intermarx/ex/: ex.h  jit.h
include/intermarx/ob/: ob.h
include/intermarx/pal/: corelib.h  pal.h
include/ldr/: ldr.h
include/mt/: mt.h
include/ob/: ob.h
include/pal/: corelib.h  pal.h
include/rtl/: rtl.h
ldr/: ldr.c
mt/: mt.c
ob/: ob.c
pal/: corelib.c  pal.c
rtl/: rtl.c
